--- a/WebDiabloMvc/wwwroot/css/styles.css
+++ b/WebDiabloMvc/wwwroot/css/styles.css
@@ -29,3 +29,10 @@
     background-color:#fff;
     color:#000;
 }
+
+.filtroP-container{
+  position: relative;
+  margin: 2em;
+  text-align: center;
+}
+
